--- a/doc/icewm.adoc
+++ b/doc/icewm.adoc
@@ -593,8 +593,92 @@ MenuFontNameXft="sans-serif:size=12:bold"
 
 === Colors
 
-ColorActiveBorder:: Color of the active window border.
-...:: TODO (see default preferences for complete list)
+ColorDialog = "rgb:C0/C0/C0":: Background of dialog windows.
+ColorNormalBorder = "rgb:C0/C0/C0":: Border of inactive windows.
+ColorActiveBorder = "rgb:C0/C0/C0":: Border of active windows.
+ColorNormalButton = "rgb:C0/C0/C0":: Background of regular buttons.
+ColorNormalButtonText = "rgb:00/00/00":: Textcolor of regular buttons.
+ColorActiveButton = "rgb:E0/E0/E0":: Background of pressed buttons.
+ColorActiveButtonText = "rgb:00/00/00":: Textcolor of pressed buttons.
+ColorNormalTitleButton = "rgb:C0/C0/C0":: Background of titlebar buttons.
+ColorNormalTitleButtonText = "rgb:00/00/00":: Textcolor of titlebar buttons.
+ColorToolButton = "":: Background of toolbar buttons, ColorNormalButton is used if empty.
+ColorToolButtonText = "":: Textcolor of toolbar buttons, ColorNormalButtonText is used if empty.
+ColorNormalWorkspaceButton = "":: Background of workspace buttons, ColorNormalButton is used if empty.
+ColorNormalWorkspaceButtonText = "":: Textcolor of workspace buttons, ColorNormalButtonText is used if empty.
+ColorActiveWorkspaceButton = "":: Background of the active workspace button, ColorActiveButton is used if empty.
+ColorActiveWorkspaceButtonText = "":: Textcolor of the active workspace button, ColorActiveButtonText is used if empty.
+ColorNormalTitleBar = "rgb:80/80/80":: Background of the titlebar of regular windows.
+ColorNormalTitleBarText = "rgb:00/00/00":: Textcolor of the titlebar of regular windows.
+ColorNormalTitleBarShadow = "":: Textshadow of the titlebar of regular windows.
+ColorActiveTitleBar = "rgb:00/00/A0":: Background of the titlebar of active windows.
+ColorActiveTitleBarText = "rgb:FF/FF/FF":: Textcolor of the titlebar of active windows.
+ColorActiveTitleBarShadow = "":: Textshadow of the titlebar of active windows.
+ColorNormalMinimizedWindow = "rgb:C0/C0/C0":: Background for mini icons of regular windows.
+ColorNormalMinimizedWindowText = "rgb:00/00/00":: Textcolor for mini icons of regular windows.
+ColorActiveMinimizedWindow = "rgb:E0/E0/E0":: Background for mini icons of active windows.
+ColorActiveMinimizedWindowText = "rgb:00/00/00":: Textcolor for mini icons of active windows.
+ColorNormalMenu = "rgb:C0/C0/C0":: Background of pop-up menus.
+ColorNormalMenuItemText = "rgb:00/00/00":: Textcolor of regular menu items.
+ColorActiveMenuItem = "rgb:A0/A0/A0":: Background of selected menu item, leave empty to force transparency.
+ColorActiveMenuItemText = "rgb:00/00/00":: Textcolor of selected menu items.
+ColorDisabledMenuItemText = "rgb:80/80/80":: Textcolor of disabled menu items.
+ColorDisabledMenuItemShadow = "":: Shadow of regular menu items.
+ColorMoveSizeStatus = "rgb:C0/C0/C0":: Background of move/resize status window.
+ColorMoveSizeStatusText = "rgb:00/00/00":: Textcolor of move/resize status window.
+ColorQuickSwitch = "rgb:C0/C0/C0":: Background of the quick switch window.
+ColorQuickSwitchText = "rgb:00/00/00":: Textcolor in the quick switch window.
+ColorQuickSwitchActive = "":: Rectangle arround the active icon in the quick switch window.
+ColorDefaultTaskBar = "rgb:C0/C0/C0":: Background of the taskbar.
+ColorNormalTaskBarApp = "rgb:C0/C0/C0":: Background for task buttons of regular windows.
+ColorNormalTaskBarAppText = "rgb:00/00/00":: Textcolor for task buttons of regular windows.
+ColorActiveTaskBarApp = "rgb:E0/E0/E0":: Background for task buttons of the active window.
+ColorActiveTaskBarAppText = "rgb:00/00/00":: Textcolor for task buttons of the active window.
+ColorMinimizedTaskBarApp = "rgb:A0/A0/A0":: Background for task buttons of minimized windows.
+ColorMinimizedTaskBarAppText = "rgb:00/00/00":: Textcolor for task buttons of minimized windows.
+ColorInvisibleTaskBarApp = "rgb:80/80/80":: Background for task buttons of windows on other workspaces.
+ColorInvisibleTaskBarAppText = "rgb:00/00/00":: Textcolor for task buttons of windows on other workspaces.
+ColorScrollBar = "rgb:A0/A0/A0":: Scrollbar background (sliding area).
+ColorScrollBarSlider = "rgb:C0/C0/C0":: Background of the slider button in scrollbars.
+ColorScrollBarButton = "rgb:C0/C0/C0":: Background of the arrow buttons in scrollbars.
+ColorScrollBarArrow = "rgb:C0/C0/C0":: Background of the arrow buttons in scrollbars (obsolete).
+ColorScrollBarButtonArrow = "rgb:00/00/00":: Color of active arrows on scrollbar buttons.
+ColorScrollBarInactiveArrow = "rgb:80/80/80":: Color of inactive arrows on scrollbar buttons.
+ColorListBox = "rgb:C0/C0/C0":: Background of listboxes.
+ColorListBoxText = "rgb:00/00/00":: Textcolor in listboxes.
+ColorListBoxSelection = "rgb:80/80/80":: Background of selected listbox items.
+ColorListBoxSelectionText = "rgb:00/00/00":: Textcolor of selected listbox items.
+ColorToolTip = "rgb:E0/E0/00":: Background of tooltips.
+ColorToolTipText = "rgb:00/00/00":: Textcolor of tooltips.
+ColorLabel = "rgb:C0/C0/C0":: Background of labels, leave empty to force transparency.
+ColorLabelText = "rgb:00/00/00":: Textcolor of labels.
+ColorInput = "rgb:FF/FF/FF":: Background of text entry fields (e.g. the addressbar).  
+ColorInputText = "rgb:00/00/00":: Textcolor of text entry fields (e.g. the addressbar).
+ColorInputSelection = "rgb:80/80/80":: Background of selected text in an entry field.
+ColorInputSelectionText = "rgb:00/00/00":: Selected text in an entry field.
+ColorClock = "rgb:00/00/00":: Background of non-LCD clock, leave empty to force transparency.
+ColorClockText = "rgb:00/FF/00":: Background of non-LCD monitor.
+ColorApm = "rgb:00/00/00":: Background of APM monitor, leave empty to force transparency.
+ColorApmText = "rgb:00/FF/00":: Textcolor of APM monitor.
+ColorApmBattary = "rgb:FF/FF/00":: Color of APM monitor in battary mode.
+ColorApmLine = "rgb:00/FF/00":: Color of APM monitor in line mode.
+ColorApmGraphBg = "rgb:00/00/00":: Background color for graph mode.
+ColorCPUStatusUser = "rgb:00/FF/00":: User load on the CPU monitor.
+ColorCPUStatusSystem = "rgb:FF/00/00":: System load on the CPU monitor.
+ColorCPUStatusInterrupts = "rgb:FF/FF/00":: Interrupts on the CPU monitor.
+ColorCPUStatusIoWait = "rgb:60/00/60":: IO Wait on the CPU monitor.
+ColorCPUStatusSoftIrq = "rgb:00/FF/FF":: Soft Interrupts on the CPU monitor.
+ColorCPUStatusNice = "rgb:00/00/FF":: Nice load on the CPU monitor.
+ColorCPUStatusIdle = "rgb:00/00/00":: Idle (non) load on the CPU monitor, leave empty to force transparency.
+ColorCPUStatusSteal = "rgb:FF/8A/91":: Involuntary Wait on the CPU monitor.
+ColorCPUStatusTemp = "rgb:60/60/C0":: Temperature of the CPU.
+ColorMEMStatusUser = "rgb:40/40/80":: User program usage in the memory monitor.
+ColorMEMStatusBuffers = "rgb:60/60/C0":: OS buffers usage in the memory monitor.
+ColorMEMStatusCached = "rgb:80/80/FF":: OS cached usage in the memory monitor.
+ColorMEMStatusFree = "rgb:00/00/00":: Free memory in the memory monitor.
+ColorNetSend = "rgb:FF/FF/00":: Outgoing load on the network monitor.
+ColorNetReceive = "rgb:FF/00/FF":: Incoming load on the network monitor.
+ColorNetIdle = "rgb:00/00/00":: Idle (non) load on the network monitor, leave empty to force transparency.
 
 === Desktop Background
 
