--- a/man/icewm-keys.pod
+++ b/man/icewm-keys.pod
@@ -16,6 +16,16 @@ Global key bindings to launch applications (not window manager related).
 IceWM allows launching of arbitrary programs with any key combination.
 This is configured in the F<keys> file.
 
+Global keybindings to launch applications, which need not be window
+manager related.  Each non-empty line starts with the word C<key>.
+After one or more spaces follows a double-quoted string of the bound X11
+key combination like C<Alt+Ctrl+Shift+X>.  Then after at least one space
+follows a shell command line which will be executed by B<icewm> whenever
+this key combination is pressed.  For example, the following line
+creates a hotkey to reload the B<icewm> configuration:
+
+ key "Ctrl+Shift+r"      pkill -x -HUP icewm
+
 =head1 FORMAT
 
 The syntax of the F<keys> file is as follows:
