--- a/man/icewm-menu.pod
+++ b/man/icewm-menu.pod
@@ -15,6 +15,12 @@ F<> F<$XDG_CONFIG_HOME/icewm/menu>
 The F<menu> file is responsible for configuring most of the L<icewm(1)>
 root menu and start menu.
 
+A menu of applications; usually customized by the user.  B<icewm>
+provides either the program L<icewm-menu-fdo(1)> or the program
+L<icewm-menu-gnome2(1)> to generate a default menu.  Similar programs
+are L<xdg_menu(1)>, L<mmaker(1)>' (MenuMaker), L<xde-menu(1)>,
+L<xdgmenumaker(1)>.
+
 =head1 FORMAT
 
 The format of the file contains one of the following line syntax:
