--- a/man/icewm-prefoverride.pod
+++ b/man/icewm-prefoverride.pod
@@ -12,6 +12,13 @@ F<> F<$XDG_CONFIG_HOME/icewm/prefoverride>
 
 =head1 DESCRIPTION
 
+Settings which override the settings from a theme.  Some of the B<icewm>
+configuration options from the preferences file which control the
+look-and-feel may be overridden by the theme, if the theme designer
+thinks this is desirable.  However, this F<prefoverride> file will again
+override this for a few specific options of your choosing.  It is safe
+to leave this file empty initially.
+
 =head1 FORMAT
 
 =head1 FILES
