--- a/man/icewm-programs.pod
+++ b/man/icewm-programs.pod
@@ -16,6 +16,11 @@ The F<menu> file is responsible for configuring most of the generated
 items in the L<icewm(1)> root menu and start menu, and is normally
 included in those menus using the B<menufile> keyword.
 
+An automatically generated menu of applications.  This could be used by
+L<wmconfig(1)>, menu or similar programs to give easy access to all the
+desktop applications which are installed on the system.
+See L<icewm-programs(5)>.
+
 =head1 FORMAT
 
 The format of the file contains one of the following line syntax:
