--- a/man/icewm-shutdown.pod
+++ b/man/icewm-shutdown.pod
@@ -12,6 +12,12 @@ F<> F<$XDG_CONFIG_HOME/icewm/shutdown>
 
 =head1 DESCRIPTION
 
+Contains commands to be executed on B<icewm> shutdown.  This is an
+executable script with commands to be executed in the last stage of
+B<icewm> termination.  Typically they may undo some of the effects of
+the F<startup> script.  It is run by L<icewm-session(1)> when B<icewm>
+terminates.
+
 =head1 FORMAT
 
 =head1 FILES
