--- a/man/icewm-theme.pod
+++ b/man/icewm-theme.pod
@@ -12,6 +12,20 @@ F<> F<$XDG_CONFIG_HOME/icewm/theme>
 
 =head1 DESCRIPTION
 
+This file contains the name of the default theme.  On startup B<icewm>
+reads this file to obtain the theme name, unless B<icewm> was started
+with the B<--theme> option.  Whenever a different theme is selected from
+the B<icewm> Menu then the theme file is overwritten with the name of
+the selected theme.  This theme file contains the keyword C<Theme>,
+followed by an equals sign, followed by a double-quoted string with the
+theme name.  The theme name is the name of the theme directory, followed
+by a slash, followed by the theme file.  Usually the theme file is just
+F<default.theme>, but a theme may have alternatives.  Alternatives are
+small tweaks of a theme.  These are specified in their own F<.theme>
+file, which replaces F<default.theme>.  If no theme file exists then
+B<icewm> will use the default setting of
+C<Theme="default/default.theme">.
+
 =head1 FORMAT
 
 =head1 FILES
