--- a/man/icewm-toolbar.pod
+++ b/man/icewm-toolbar.pod
@@ -16,6 +16,19 @@ The F<toolbar> file is responsible for configuring quick launch
 application icons that are placed on the L<icewm(1)> panel.  The file is
 used to place programs as buttons on the L<icewm(1)> pane
 
+Contains names of quick to launch applications with icons for the task
+bar.  Each non-empty non-comment line starts with the keyword B<prog>.
+After one or more spaces follows a name, which is displayed in a tool
+tip whenever the mouse cursor hovers over the toolbar icon.  This name
+may be a double quoted string.  Then follows the bare name of the icon
+to use without extensions.  This icon will be shown in the toolbar.  The
+last component is a shell command line which will be executed whenever
+the user presses the icon in the toolbar.  For example, the following
+line in toolbar will create a button with tool tip C<Mozilla Firefox>
+with the F<firefox> icon which launches L<firefox(1)> when clicked:
+
+ prog  "Mozilla Firefox"  firefox  /usr/bin/firefox --private-window
+
 =head1 FORMAT
 
 The format of the file contains one of the following line syntax:
