update search path

--- a/man/icewm-env.pod
+++ b/man/icewm-env.pod
@@ -6,9 +6,11 @@
 
 =head1 SYNOPSIS
 
-F<> F<$XDG_CONFIG_HOME/icewm/env>
+F<> F<$ICEWM_PRIVCFG/env>
+ F<$XDG_CONFIG_HOME/icewm/env>
  F<$HOME/.icewm/env>
  F</usr/share/icewm/env>
+ F</usr/local/share/icewm/env>
 
 =head1 DESCRIPTION
 
@@ -34,9 +36,11 @@ followed by an equals sign, followed by the value (which may be empty).
 
 Locations for the toolbar options file are as follows:
 
-F<>    F<$XDG_CONFIG_HOME/icewm/env>
+F<>    F<$ICEWM_PRIVCFG/env>
+    F<$XDG_CONFIG_HOME/icewm/env>
     F<$HOME/.icewm/env>
     F</usr/share/icewm/env>
+    F</usr/local/share/icewm/env>
 
 =head1 SEE ALSO
 
