--- a/man/icewm-theme.pod
+++ b/man/icewm-theme.pod
@@ -6,9 +6,11 @@
 
 =head1 SYNOPSIS
 
-F<> F<$XDG_CONFIG_HOME/icewm/theme>
+F<> F<$ICEWM_PRIVCFG/theme>
+ F<$XDG_CONFIG_HOME/icewm/theme>
  F<$HOME/.icewm/theme>
  F</usr/share/icewm/theme>
+ F</usr/local/share/icewm/theme>
 
 =head1 DESCRIPTION
 
@@ -32,9 +34,11 @@ C<Theme="default/default.theme">.
 
 Locations for the toolbar options file are as follows:
 
-F<>    F<$XDG_CONFIG_HOME/icewm/theme>
+F<>    F<$ICEWM_PRIVCFG/theme>
+    F<$XDG_CONFIG_HOME/icewm/theme>
     F<$HOME/.icewm/theme>
     F</usr/share/icewm/theme>
+    F</usr/local/share/icewm/theme>
 
 =head1 SEE ALSO
 
