--- a/man/icewm-toolbar.pod
+++ b/man/icewm-toolbar.pod
@@ -6,9 +6,11 @@
 
 =head1 SYNOPSIS
 
-F<> F<$XDG_CONFIG_HOME/icewm/toolbar>
+F<> F<$ICEWM_PRIVCFG/toolbar>
+ F<$XDG_CONFIG_HOME/icewm/toolbar>
  F<$HOME/.icewm/toolbar>
  F</usr/share/icewm/toolbar>
+ F</usr/local/share/icewm/toolbar>
 
 =head1 DESCRIPTION
 
@@ -86,9 +88,11 @@ L<icewm(1)> panel:
 
 Locations for the toolbar options file are as follows:
 
-F<>    F<$XDG_CONFIG_HOME/icewm/toolbar>
+F<>    F<$ICEWM_PRIVCFG/toolbar>
+    F<$XDG_CONFIG_HOME/icewm/toolbar>
     F<$HOME/.icewm/toolbar>
     F</usr/share/icewm/toolbar>
+    F</usr/local/share/icewm/toolbar>
 
 =head1 SEE ALSO
 
