add examples section

--- a/man/icewm-prefoverride.pod
+++ b/man/icewm-prefoverride.pod
@@ -23,6 +23,8 @@ to leave this file empty initially.
 
 =head1 FORMAT
 
+=head1 EXAMPLES
+
 =head1 FILES
 
 Locations for the toolbar options file are as follows:
