--- a/man/icewm-startup.pod
+++ b/man/icewm-startup.pod
@@ -22,6 +22,8 @@ It is run by L<icewm-session(1)> when B<icewm> starts.
 
 =head1 FORMAT
 
+=head1 EXAMPLES
+
 =head1 FILES
 
 Locations for the toolbar options file are as follows:
