--- a/man/icewm-theme.pod
+++ b/man/icewm-theme.pod
@@ -30,6 +30,8 @@ C<Theme="default/default.theme">.
 
 =head1 FORMAT
 
+=head1 EXAMPLES
+
 =head1 FILES
 
 Locations for the toolbar options file are as follows:
