--- a/man/icewm-theme.pod
+++ b/man/icewm-theme.pod
@@ -14,23 +14,42 @@ F<> F<$ICEWM_PRIVCFG/theme>
 
 =head1 DESCRIPTION
 
-This file contains the name of the default theme.  On startup B<icewm>
-reads this file to obtain the theme name, unless B<icewm> was started
-with the B<--theme> option.  Whenever a different theme is selected from
-the B<icewm> Menu then the theme file is overwritten with the name of
-the selected theme.  This theme file contains the keyword C<Theme>,
-followed by an equals sign, followed by a double-quoted string with the
-theme name.  The theme name is the name of the theme directory, followed
-by a slash, followed by the theme file.  Usually the theme file is just
-F<default.theme>, but a theme may have alternatives.  Alternatives are
-small tweaks of a theme.  These are specified in their own F<.theme>
-file, which replaces F<default.theme>.  If no theme file exists then
-B<icewm> will use the default setting of
-C<Theme="default/default.theme">.
+The F<theme> file contains the name of the default theme.  On startup
+B<icewm> reads this file to obtain the theme name, unless B<icewm> was
+started with the B<--theme> option.  Whenever a different theme is
+selected from the B<icewm> Menu then the theme file is overwritten with
+the name of the selected theme.
 
 =head1 FORMAT
 
+This theme file contains the keyword C<Theme>, followed by an equals
+sign, followed by a double-quoted string with the theme name.  The theme
+name is the name of the theme directory, followed by a slash, followed
+by the theme file.
+
+Usually the theme file is just F<default.theme>, but a theme may have
+alternatives.  Alternatives are small tweaks of a theme.  These are
+specified in their own F<.theme> file, which replaces F<default.theme>.
+
+If no theme file exists then B<icewm> will use the default setting of
+C<Theme="default/default.theme">.
+
 =head1 EXAMPLES
+
+Following is my current F<theme> file.  You can see from the comments
+that L<icewm(1)> keeps a history of the previous ten theme settings.
+
+ Theme="Unexicon-towers/default.theme"
+ #Theme="Unexicon-pedestals/default.theme"
+ ##Theme="Unexicon-penguins/default.theme"
+ ###Theme="Unexicon/default.theme"
+ ####Theme="Squared-for-debian/default.theme"
+ #####Theme="Squared-grey/default.theme"
+ ######Theme="Squared-green/default.theme"
+ #######Theme="Penguins/default.theme"
+ ########Theme="Squared-blue/default.theme"
+ #########Theme="default/default.theme"
+ ##########Theme="yellowmotif/default.theme"
 
 =head1 FILES
 
